--- a/index.html
+++ b/index.html
@@ -7,6 +7,9 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css" integrity="sha384-WskhaSGFgHYWDcbwN70/dfYBj47jz9qbsMId/iRN3ewGhXQFZCSftd1LZCfmhktB" crossorigin="anonymous">
     <!-- FONT AWESOME -->
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.13/css/all.css" integrity="sha384-DNOHZ68U8hZfKXOrtjWvjxusGo9WQnrNx2sqG0tfsghAvtVlRW3tvkXWZh58N9jp" crossorigin="anonymous">
+    <!-- Google Fonts CSS -->
+    <link href="https://fonts.googleapis.com/css?family=Roboto&display=swap" rel="stylesheet">
+
     <!-- CUSTOM CSS -->
     <link rel="stylesheet" href="main.css">
   </head>
@@ -46,47 +49,49 @@
             </div>
            </nav>
 
-      <!-- ENCABEZADO PRINCIPAL-->
-
-    <header class="main-header">
-      <div class="background-overlay text-white py-5">
-        <div class="container">
-          <div class="row d-flex h-100">
-            <div class="col-sm-12 text-center justify-content-center align-self-center">
-              <br>
-              <br>
-              <br>
-              <br>
-              <br>
-              <br>              
-              <br>
-              <br>
-              <br>
-              <br>
-              <br>
-              <br>
-              <h1>Finta Sport</h1>
-              <H5>Deporte y Sublimación</H5>
-              <br>
-              <a href="#somos" class="btn btn-info text-white p-2 m-2">
-                Somos
-            </a>
-              <a href="#servicios" class="btn btn-primary text-white p-2 m-2">
-                  Servicios
-              </a>
-            
-              <br>
-              <br>
-              <br>
-              <br>
-              <br>
-              <br>
-              <br> 
+      <!-- SLIDER-->
+      <div class="bd-example">
+        <div id="carouselExampleCaptions" class="carousel slide" data-ride="carousel">
+          <ol class="carousel-indicators">
+            <li data-target="#carouselExampleCaptions" data-slide-to="0" class="active"></li>
+            <li data-target="#carouselExampleCaptions" data-slide-to="1"></li>
+            <li data-target="#carouselExampleCaptions" data-slide-to="2"></li>
+          </ol>
+          <div class="carousel-inner">
+            <div class="carousel-item active">
+              <img src="img/misses.jpg" class="d-block w-100" alt="...">
+              <div class="carousel-caption d-none d-md-block">
+                <h1>Finta Sport</h1>
+                <h5>Sublimación, Uniformes y Articulos Deportivos.</h5>
+              </div>
+            </div>
+            <div class="carousel-item">
+              <img src="img/ciclista.jpg" class="d-block w-100" alt="...">
+              <div class="carousel-caption d-none d-md-block">
+                <h1>Sublimación de Uniformes</h1>
+                <h5>Fabricamos y Sublimamos todo tipo de Uniformes.</h5>
+              </div>
+            </div>
+            <div class="carousel-item">
+              <img src="img/balon.jpg" class="d-block w-100" alt="...">
+              <div class="carousel-caption d-none d-md-block">
+                <h1>Articulos Deportivos</h1>
+                <h5>Vendemos articulos deportivos.</h5>
+              </div>
             </div>
           </div>
+          <a class="carousel-control-prev" href="#carouselExampleCaptions" role="button" data-slide="prev">
+            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+            <span class="sr-only">Previous</span>
+          </a>
+          <a class="carousel-control-next" href="#carouselExampleCaptions" role="button" data-slide="next">
+            <span class="carousel-control-next-icon" aria-hidden="true"></span>
+            <span class="sr-only">Next</span>
+          </a>
         </div>
       </div>
-    </header>
+          <!-- ENCABEZADO PRINCIPAL-->
+   
 
     <!-- SECCION DE SOMOS  -->
     
