--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
               <img src="img/misses.jpg" class="d-block w-100" alt="...">
               <div class="carousel-caption d-none d-md-block">
                 <h1>Finta Sport</h1>
-                <h5>Sublimación, Uniformes y Articulos Deportivos.</h5>
+                <h5>Sublimación, Uniformes y Artículos Deportivos.</h5>
               </div>
             </div>
             <div class="carousel-item">
@@ -75,8 +75,8 @@
             <div class="carousel-item">
               <img src="img/balon.jpg" class="d-block w-100" alt="...">
               <div class="carousel-caption d-none d-md-block">
-                <h1>Articulos Deportivos</h1>
-                <h5>Vendemos articulos deportivos.</h5>
+                <h1>Artículos Deportivos</h1>
+                <h5>Vendemos artículos deportivos.</h5>
               </div>
             </div>
           </div>
