--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
                       <a href="#uniformes" class="nav-link">Uniformes</a>
                     </li>
                     <li class="nav-item">
-                      <a href="#deportes" class="nav-link">Deportes</a>
+                      <a href="#deportes" class="nav-link">Artículos Deportivos</a>
                     </li>
                   <li class="nav-item">
                     <a href="#contacto" class="nav-link">Contactos</a>
