--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
                         <a class="dropdown-item" href="#deportes">Escaleras</a>
                         <a class="dropdown-item" href="#deportes">Minas</a>
                         <a class="dropdown-item" href="#deportes">Vallas</a>
-                        <a class="dropdown-item" href="#deportes">Mayas para Arquerías</a>
+                        <a class="dropdown-item" href="#deportes">Mallas para Arquerías</a>
                         <a class="dropdown-item" href="#deportes">Cintas de demarcación</a>
 
                         <div class="dropdown-divider"></div>
