--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
                       <a href="#uniformes-deportivos" class="nav-link">Uniformes Deportivos</a>
                      </li>
                      <li class="nav-item">
-                      <a href="#articulos-deportivos" class="nav-link">Artículos Deportivos</a>
+                      <a href="#artículos-deportivos" class="nav-link">Artículos Deportivos</a>
                      </li>
                      <li class="nav-item">
                        <a href="#sublimacion-textil" class="nav-link">Sublimación Textil</a>
@@ -57,13 +57,13 @@
                         Artículos Deportivos
                       </a>
                       <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                        <a class="dropdown-item" href="#deportes">Balones</a>
-                        <a class="dropdown-item" href="#deportes">Estacas</a>
-                        <a class="dropdown-item" href="#deportes">Escaleras</a>
-                        <a class="dropdown-item" href="#deportes">Minas</a>
-                        <a class="dropdown-item" href="#deportes">Vallas</a>
-                        <a class="dropdown-item" href="#deportes">Mayas para Arquerías</a>
-                        <a class="dropdown-item" href="#deportes">Cintas de demarcación</a>
+                        <a class="dropdown-item" href="#artículos-deportivos">Balones</a>
+                        <a class="dropdown-item" href="#artículos-deportivos">Estacas</a>
+                        <a class="dropdown-item" href="#artículos-deportivos">Escaleras</a>
+                        <a class="dropdown-item" href="#artículos-deportivos">Minas</a>
+                        <a class="dropdown-item" href="#artículos-deportivos">Vallas</a>
+                        <a class="dropdown-item" href="#artículos-deportivos">Mayas para Arquerías</a>
+                        <a class="dropdown-item" href="#artículos-deportivos">Cintas de demarcación</a>
                       </div>
                     </li>
                   <li class="nav-item">
