--- a/index.html
+++ b/index.html
@@ -569,7 +569,7 @@
       delay: 1000, 
       origin: 'bottom'
     });
-    sr.reveal('', {
+    sr.reveal('h1', {
       duration: 2000,
       origin: 'top',
       distance: '150px',
